--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
 form label {
-  display: block;
-  font-size: 18px;
-  margin-bottom: 5px;
-  color: gray;
-  font-family: arial;
-}
+    display: block;
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: black;
+    font-family: arial;
+  }
+
+  form input[type=text] {
+    color: #000;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+
+  textarea {
+    width: 300px;
+    height: 150px;
+  }
